# gloo-lang

./: .gitignore  .mise.toml  CHANGELOG.md  CONTRIBUTING.md  README.md  flake.nix  root-wasm32.code-workspace  root.code-workspace
.cursor/rules/: diataxis-docs.mdc
.github/workflows/: build-python-release.reusable.yaml  build-ruby-release.reusable.yaml  build-typescript-release.reusable.yaml  build-vscode-release.reusable.yaml  primary.yml  publish-github-release.yaml  publish-python-release.yaml  release.yml
docs/: docs.yml
docs/docs/calling-baml/: validations.mdx
docs/docs/snippets/: supported-types.mdx
docs/old/: docs.yml
engine/: Cargo.toml
engine/baml-lib/baml/: build.rs
engine/baml-lib/baml-types/: Cargo.toml
engine/baml-lib/jsonish/: Cargo.toml
engine/baml-lib/parser-database/: Cargo.toml
engine/baml-runtime/: Cargo.toml
engine/baml-runtime/benches/: lib.rs
engine/baml-runtime/src/: lib.rs  runtime_interface.rs
engine/baml-runtime/tests/: test_runtime.rs
engine/baml-schema-wasm/: Cargo.toml
engine/baml-schema-wasm/src/: lib.rs
engine/baml-schema-wasm/tests/: test_file_manager.rs
engine/bstd/: Cargo.toml
engine/bstd/src/: dedent.rs  project_fqn.rs
engine/btrace/: Cargo.toml  tracer_thread.rs
engine/btrace/src/: lib.rs  tracer_thread.rs
engine/cli/: Cargo.toml
engine/cli/src/: api_client.rs  auth.rs  commands.rs  deploy.rs  format.rs  lib.rs  lsp.rs  main.rs  propelauth.rs
engine/language_client_codegen/src/: lib.rs  openapi.rs
engine/language_client_python/: Cargo.toml  pyproject.toml
engine/language_client_python/src/: errors.rs  lib.rs  parse_py_type.rs  runtime.rs
engine/language_client_ruby/: baml.gemspec
engine/language_client_ruby/.cargo/: config.toml
engine/language_client_typescript/: .gitignore  Cargo.toml  async_context_vars.js  checked.d.ts  checked.d.ts.map  index.d.ts.map  index.js  native.d.ts  package.json  stream.d.ts  stream.d.ts.map  stream.js  type_builder.d.ts  type_builder.d.ts.map  type_builder.js
engine/language_client_typescript/.cargo/: config.toml
engine/language_client_typescript/artifacts/: errors.d.ts  errors.d.ts.map  (+8 more)
engine/language_server/: CONTRIBUTING.md  Cargo.toml
engine/language_server/src/: edit.rs  fix.rs  format.rs  lib.rs  lint.rs  logging.rs  resolve.rs  server.rs  session.rs  system.rs  tests.rs
engine/language_server/src/baml_db/: mod.rs
engine/language_server/src/baml_diagnostics/: diagnostic.rs  edit.rs  fix.rs  mod.rs  source_map.rs  violation.rs
engine/language_server/src/baml_linter/: fs.rs  mod.rs  source_kind.rs
engine/language_server/src/baml_project/: file_utils.rs  metadata.rs  mod.rs  position_utils.rs  watch.rs
engine/language_server/src/baml_source_file/: line_index.rs  line_ranges.rs  mod.rs  newlines.rs
engine/language_server/src/baml_text_size/: mod.rs  range.rs  size.rs
engine/language_server/src/edit/: notebook.rs  range.rs  replacement.rs  text_document.rs
engine/language_server/src/server/: api.rs  connection.rs  schedule.rs
engine/language_server/src/server/api/: diagnostics.rs  notifications.rs  requests.rs  traits.rs
engine/language_server/src/server/api/notifications/: did_change.rs  did_change_notebook.rs  did_change_watched_files.rs  did_close.rs  did_close_notebook.rs  did_open.rs  did_open_notebook.rs
engine/language_server/src/server/api/requests/: code_action.rs  code_action_resolve.rs  diagnostic.rs  execute_command.rs  format.rs  format_range.rs  hover.rs
engine/language_server/src/session/: capabilities.rs  index.rs  ruff_settings.rs  settings.rs  workspace.rs
engine/sandbox/: Cargo.toml
engine/sandbox/src/: btrace.rs  main.rs
fern/: docs.yml  fern.config.json
fern/03-reference/: overview.mdx
fern/pages/: changelog.mdx  welcome.mdx
fern/snippets/: supports-streaming-openai.mdx  supports-streaming.mdx
integ-tests/: README.md
integ-tests/baml_src/: clients.baml  generators.baml
integ-tests/python/: README.md  pyproject.toml  report.html  run_tests.sh
integ-tests/react/: next.config.ts  package.1.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
integ-tests/ruby/: test_functions.rb
integ-tests/typescript/: fuck.txt  memory-usage-events.json  memory-usage-timeline.json  package.json  test-report.html
tools/: build  bump-version
tools/versions/: engine.cfg  integ-tests.cfg  python.cfg  ruby.cfg  typescript.cfg  vscode.cfg
typescript/: .eslintrc.js  pnpm-lock.yaml
typescript/fiddle-frontend/: package.json  tsconfig.json
typescript/fiddle-proxy/: package-lock.json  package.json  server.js
typescript/nextjs-plugin/: package.json  pnpm-lock.yaml
typescript/playground-common/: package.json
(+443 files in other folders)
