[package]
edition = "2021"
name = "bstd"
version.workspace = true
authors.workspace = true
description.workspace = true
license-file.workspace = true

[package.metadata.rustflags]
RSTEST_TIMEOUT = "10"

[lints.rust]
unused_imports = "deny"
unused_variables = "deny"

[dependencies]
anyhow.workspace = true
array-macro.workspace = true
base64.workspace = true
bytes.workspace = true
colored = "2.1.0"
console = "0.15.0"
dashmap.workspace = true
derive_more.workspace = true
dialoguer = "0.11.0"
difference = "2.0.0"
dunce = "1.0.4"
either.workspace = true
env_logger.workspace = true
etcetera = "0.8.0"
eventsource-stream = "0.2.3"
futures.workspace = true
http.workspace = true
http-body.workspace = true
indexmap.workspace = true
indicatif = "0.17.8"
indoc.workspace = true
log.workspace = true
num = "0.4"
open = "5.3.0"
pathdiff = "0.1.0"
rand.workspace = true
reqwest.workspace = true
regex.workspace = true
scopeguard.workspace = true
serde.workspace = true
serde_json.workspace = true
similar = { version = "2.6.0", features = ["inline"] }
strsim = "0.11.1"
strum.workspace = true
strum_macros.workspace = true
walkdir.workspace = true
uuid = { version = "1.8.0", features = ["v4", "serde"] }
web-time.workspace = true
static_assertions.workspace = true
mime_guess = "2.0.4"
mime = "0.3.17"


[features]
defaults = []
internal = []
skip-integ-tests = []

[dev-dependencies]
assert_cmd = "2"
console_log = "1"
dissimilar = "1.0.4"
expect-test = "1.1.0"
indoc.workspace = true
pretty_assertions.workspace = true
either = "1.8.1"
rstest = "0.22.0"
wasm-bindgen-test = "0.3.42"
walkdir = "2.5.0"
