[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
axum = "0.7"
log.workspace = true
tokio = { version = "1.36", features = ["full"] }
uuid.workspace = true
tracing = { version = "0.1.40", features = ["valuable"] }
tracing-core = { version = "0.1.33" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
web-time.workspace = true
serde_json.workspace = true
